Fix the header spacing slightly

--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ section .location {
 h2.section-title {
     display: inline-block;
     background: #fff;
-    padding: 0 1em 0.3em 0;
+    padding: 0 1em 0.25em 0;
     color: #ff6d1f;
     text-transform: uppercase;
     font-weight: 600;
